# sfui

./: .gitmodules  Button.h  CMakeLists.txt  Component.h  ComponentContainer.cpp  ComponentContainer.h  ComponentGeometry.cpp  ComponentGeometry.h  ComponentHandlers.cpp  ComponentHandlers.h  ComponentNode.cpp  Form.h  Image.h  LICENSE  Observer.h  Parsers.cpp  Parsers.h  README.md  UserInterface.cpp  Window.h
component/: Button.h  Edit.cpp  Edit.h  Form.h  Image.cpp  Image.h  Label.cpp  Label.h  Panel.h  Window.cpp  Window.h
component/details/: Base.h  Component.cpp  Component.h  ComponentBase.cpp  ComponentBase.h  Container.cpp  Container.h  Geometry.cpp  Geometry.h  Handlers.cpp  Handlers.h  Node.cpp  Node.h  Parsers.cpp  Parsers.h
example/: CMakeLists.txt  README.md  main.cpp
example/gui/: gui.json
example/gui/forms/: about.json  galaxy_map.json  government.json  hangar.json  info_center.json  load_game.json  main_menu.json  menu.json  new_game.json  planet.json  rating.json  save_game.json  settings.json  ship.json  shop.json  start_game.json  talk.json  trade_center.json
example/gui/panels/: main_panel.json
include/sfui/: ComponentFactory.h  ConfigParser.h  FileLoader.h  FontLibrary.h  ImageData.h  UserInterface.h
include/sfui/component/: Button.h  Edit.h  Form.h  Image.h  Label.h  Panel.h  Window.h
include/sfui/component/details/: Component.h  ComponentBase.h  Geometry.h  Handlers.h  Parsers.h
src/: AnimsLoader.cpp  ComponentFactory.cpp  FontLibrary.cpp  ImageData.cpp  UserInterface.cpp
src/component/: Edit.cpp  Image.cpp  Label.cpp  Window.cpp
src/component/details/: Component.cpp  ComponentBase.cpp  Geometry.cpp  Handlers.cpp  Parsers.cpp
tests/: CMakeLists.txt  TestExample.cpp  TestFileLoader.cpp  UTest.hpp
utils/: function_traits.h  unicode.h
